# python_rts

./: .gitignore  Dockerfile  Makefile  README.md  arena.py  docker-compose.yml  pyproject.toml  server.py  webarena.py
.github/workflows/: test.yml
backend/: arena.py  webarena.py
bots/: random_bot.py  strongest_bot.py  weakest_bot.py
frontend/: index.html  main.js  package.json  vite.config.js
frontend/src/: App.css  App.jsx
tests/: test_frontend_page.py  test_readme_commands.py
