[project]
name = "python-rts"
version = "0.1.0"
description = "Simple RTS bot arena"
authors = [{name="Unknown"}]
readme = "README.md"
dependencies = [
    "fastapi",
    "uvicorn",
]
requires-python = ">=3.10"

[project.optional-dependencies]
dev = ["pytest"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["backend"]
